--- a/app/styles/_config.sass
+++ b/app/styles/_config.sass
@@ -3,3 +3,6 @@ $slicer-breakpoints:        0        400px       600px       800px       1000px 
 //                          └────┬────┘ └────┬────┘ └────┬────┘ └────┬────┘ └────┬────┘ └────┬────
 // Slice numbers:                1           2           3           4           5
 $slicer-breakpoint-names:       'xs'        's'         'm'         'l'         'xl'       'xxl'
+
+
+$ita-max-width: 1200px
